self define scan UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.john.qrcodeapp.ActivityMain">
 
-    <Button
+    <!--<Button
         android:id="@+id/button_permission"
         android:text="申请权限"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
     <Button
         android:id="@+id/button_scan_QR"
         android:text="扫描二维码"
@@ -26,9 +26,9 @@
         android:text="从图库中选择图片"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <!--<Button
-        android:id="@+id/button_scan_QR_"
-        android:text="扫描二维码"
+    <Button
+        android:id="@+id/button_scan_QR_self_define"
+        android:text="自定义UI"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />-->
+        android:layout_height="wrap_content" />
 </LinearLayout>
